    {+} Completely new SQLite engine
    {+} Completely new MySQL/MariaDB engine
    {+} !setdownoutofspace command to configure set_down_on_out_of_space value per site (#158)
    {+} Detection for RaidenFTPD sites added (#231)
    {+} (internal) SITE FEAT response parsing (#237)
    {+} Some unit tests are added, please help to add more!
    {+} Wildcard support for !setsocks5 SITE (#234)
    {#} Fixed !routelock so it doesn't remove normal route when removing lock
    {#} precmd can be removed by omiting precommand via !setprecmd (#178)
    {#} Remove language and 2160(p|i) tags before searching on TVmaze
    {#} Correct counting and comparing of CRC errors in TPazoRaceTask
    {#} Missing built-in skip features from slftp.skip added (#195)
    {#} Saving TVInfo for some shows containing ' in its name (#191, #196)
    {#} Double free of TNukeQueueItem (#203)
    {#} !batch looses sites in bnctest output over time (#216)
    {#} !prelist parameter count (#212)
    {#} Wrong mp3genre detected on IRC announce (#114)
    {#} !raw command timeout/error handling (#225)
    {#} !slots command didn't supported showing of siteslots for all sites (#230)
    {#} Addpre event received after a NEWDIR will now correctly update kb with the pretime and recalc routes
    {#} Converting error in TVMaze lookup if webChannel exists but Country was null (#233)
    {#} Logging of categories which are specified as value for debugging works now
    {#} Replacing of <yyyy>, <yy>, <mm>, ... identifiers for sectiondir was missed in some places
    {#} No segmentation fault if terminal window is too big (#213)
    {#} Correctly apply <sample/proof/...>_dirs_priority to files
    {#} reqfiller not realizing requests are done (#32)
    {^} Requests can be filled from sites without checking the routes. (#168)
    {^} All irc commands with * as allowed input for sitename should output stuff in alphabetical order. (#163)
    {^} [MKDIR Denied] msg shows path with denied releasename.