@@ -84,6 +84,7 @@
     {+} (internal) SITE FEAT response parsing (#237)
     {+} Some unit tests are added, please help to add more!
     {+} Wildcard support for !setsocks5 SITE (#234)
+    {+} Make TV-releases skippable for iMDB lookups (#232)
     {#} Fixed !routelock so it doesn't remove normal route when removing lock
     {#} precmd can be removed by omiting precommand via !setprecmd (#178)
     {#} Remove language and 2160(p|i) tags before searching on TVmaze
